packages/desktop_autopaste/lib/src/ffi/generated/desktop_autopaste_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset(
  'package:desktop_autopaste/src/ffi/generated/desktop_autopaste_bindings.dart',
)
library;

import 'dart:ffi' as ffi;

@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Char>,
    ffi.Int32,
    ffi.Int32,
    ffi.Pointer<ffi.Char>,
    ffi.Uint32,
  )
>()
external int desktop_autopaste_paste_into_cursor_via_clipboard(
  ffi.Pointer<ffi.Char> text_utf8,
  int pre_paste_delay_ms,
  int paste_shortcut,
  ffi.Pointer<ffi.Char> error_utf8,
  int error_utf8_capacity,
);

@ffi.Native<
  ffi.Int32 Function(
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Pointer<ffi.Char>,
    ffi.Uint32,
    ffi.Pointer<ffi.Char>,
    ffi.Uint32,
  )
>()
external int desktop_autopaste_get_focused_text_field_context_json(
  int max_chars_before,
  int max_chars_after,
  int enable_screen_reader,
  ffi.Pointer<ffi.Char> context_json_utf8,
  int context_json_utf8_capacity,
  ffi.Pointer<ffi.Char> error_utf8,
  int error_utf8_capacity,
);

@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<desktop_autopaste_text_edit_operation_t>,
    ffi.Uint32,
    ffi.Pointer<ffi.Char>,
    ffi.Uint32,
  )
>()
external int desktop_autopaste_edit_focused_text_field(
  ffi.Pointer<desktop_autopaste_text_edit_operation_t> operations,
  int operation_count,
  ffi.Pointer<ffi.Char> error_utf8,
  int error_utf8_capacity,
);

final class desktop_autopaste_text_edit_operation_t extends ffi.Struct {
  @ffi.Int32()
  external int start;

  @ffi.Int32()
  external int end;

  external ffi.Pointer<ffi.Char> replacement_utf8;
}
